--- a/roles/kubernetes-apps/csi_driver/cinder/templates/cinder-csi-controllerplugin.yml.j2
+++ b/roles/kubernetes-apps/csi_driver/cinder/templates/cinder-csi-controllerplugin.yml.j2
@@ -17,6 +17,21 @@ spec:
       labels:
         app: csi-cinder-controllerplugin
     spec:
+      # Node affinity is used instead of nodeSelector,
+      # as the pod should tolerate all taints and still
+      # not be executed on master/control plane nodes.
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                - key: node-role.kubernetes.io/control-plane
+                  operator: DoesNotExist
+      # Tolerate all NoSchedule taints to enable monitoring
+      # even if customer uses taints for worker nodes.
+      tolerations:
+        - effect: NoSchedule
+          operator: Exists
       serviceAccountName: csi-cinder-controller-sa
       containers:
         - name: csi-attacher
